// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with new data 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin-top: 3rem;
  cursor: pointer;
}

.c1:hover .infos {
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1 .title {
  font-size: 1.4rem;
  padding-top: 0.2rem;
  text-align: center;
  color: #3b3f45;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 12px 12px 0 0;
  background-color: #ffffff;
}

.c1 .infos {
  padding: 0.7rem 1rem;
  padding-top: 1rem;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 0 0 12px 12px;
  border-top: none;
}

.c1 .infos .info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.2rem 0;
}

.c1 .infos .info.add {
  color: #348538;
}

.c1 .infos .info.add::before {
  content: '\\f067';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.mod {
  color: #de8c00;
}

.c1 .infos .info.mod::before {
  content: '\\f192';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.del {
  color: #c92d2d;
  text-decoration: line-through;
}

.c1 .infos .info.del::before {
  content: '\\f068';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.7rem;
  margin-right: 0.5rem;
}

.c1 .infos .info .tag {
  -webkit-flex: 0 0 10rem;
  -ms-flex: 0 0 10rem;
  flex: 0 0 10rem;
  line-height: 2.7rem;
  font-size: 1.4rem;
  font-weight: bold;
}

.c1 .infos .info .value {
  font-size: 1.5rem;
  line-height: 2.7rem;
}

.c1.fix .title,
.c1.fix .infos,
.c1.new .title,
.c1.new .infos {
  border-color: #186fc5;
}

.c1.fix .title,
.c1.new .title {
  color: #ffffff;
  background-color: #2196f3;
}

@media (max-width:50rem) {
  .c1 .infos .info .tag {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

<span
  className="c0"
>
  <div
    className="fix c1"
    onClick={null}
  >
    <div
      className="title"
    >
      
    </div>
    <div
      className="infos"
    >
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          leisure
        </div>
        <div
          className="value"
        >
          pitch
        </div>
      </div>
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          source
        </div>
        <div
          className="value"
        >
          data.gouv.fr:Le ministère des droits des femmes, de la ville, de la jeunesse et des sports - 11/2015
        </div>
      </div>
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          sport
        </div>
        <div
          className="value"
        >
          volleyball
        </div>
      </div>
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          surface
        </div>
        <div
          className="value"
        >
          asphalt
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with only osm 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin-top: 3rem;
  cursor: pointer;
}

.c1:hover .infos {
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1 .title {
  font-size: 1.4rem;
  padding-top: 0.2rem;
  text-align: center;
  color: #3b3f45;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 12px 12px 0 0;
  background-color: #ffffff;
}

.c1 .infos {
  padding: 0.7rem 1rem;
  padding-top: 1rem;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 0 0 12px 12px;
  border-top: none;
}

.c1 .infos .info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.2rem 0;
}

.c1 .infos .info.add {
  color: #348538;
}

.c1 .infos .info.add::before {
  content: '\\f067';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.mod {
  color: #de8c00;
}

.c1 .infos .info.mod::before {
  content: '\\f192';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.del {
  color: #c92d2d;
  text-decoration: line-through;
}

.c1 .infos .info.del::before {
  content: '\\f068';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.7rem;
  margin-right: 0.5rem;
}

.c1 .infos .info .tag {
  -webkit-flex: 0 0 10rem;
  -ms-flex: 0 0 10rem;
  flex: 0 0 10rem;
  line-height: 2.7rem;
  font-size: 1.4rem;
  font-weight: bold;
}

.c1 .infos .info .value {
  font-size: 1.5rem;
  line-height: 2.7rem;
}

.c1.fix .title,
.c1.fix .infos,
.c1.new .title,
.c1.new .infos {
  border-color: #186fc5;
}

.c1.fix .title,
.c1.new .title {
  color: #ffffff;
  background-color: #2196f3;
}

@media (max-width:50rem) {
  .c1 .infos .info .tag {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

<span
  className="c0"
>
  <div
    className="osm c1"
    onClick={null}
  >
    <div
      className="title"
    >
      
    </div>
    <div
      className="infos"
    >
      <div
        className="info"
      >
        <div
          className="tag"
        >
          amenity
        </div>
        <div
          className="value"
        >
          school
        </div>
      </div>
      <div
        className="info"
      >
        <div
          className="tag"
        >
          name
        </div>
        <div
          className="value"
        >
          Collège Maurice SATINEAU
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with osm fixable data  1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin-top: 3rem;
  cursor: pointer;
}

.c1:hover .infos {
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1 .title {
  font-size: 1.4rem;
  padding-top: 0.2rem;
  text-align: center;
  color: #3b3f45;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 12px 12px 0 0;
  background-color: #ffffff;
}

.c1 .infos {
  padding: 0.7rem 1rem;
  padding-top: 1rem;
  border-width: 2px;
  border-style: solid;
  border-color: #c9cacc;
  border-radius: 0 0 12px 12px;
  border-top: none;
}

.c1 .infos .info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.2rem 0;
}

.c1 .infos .info.add {
  color: #348538;
}

.c1 .infos .info.add::before {
  content: '\\f067';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.mod {
  color: #de8c00;
}

.c1 .infos .info.mod::before {
  content: '\\f192';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.8rem;
  margin-right: 0.5rem;
}

.c1 .infos .info.del {
  color: #c92d2d;
  text-decoration: line-through;
}

.c1 .infos .info.del::before {
  content: '\\f068';
  font-family: FontAwesome;
  font-size: 1.3rem;
  line-height: 2.7rem;
  margin-right: 0.5rem;
}

.c1 .infos .info .tag {
  -webkit-flex: 0 0 10rem;
  -ms-flex: 0 0 10rem;
  flex: 0 0 10rem;
  line-height: 2.7rem;
  font-size: 1.4rem;
  font-weight: bold;
}

.c1 .infos .info .value {
  font-size: 1.5rem;
  line-height: 2.7rem;
}

.c1.fix .title,
.c1.fix .infos,
.c1.new .title,
.c1.new .infos {
  border-color: #186fc5;
}

.c1.fix .title,
.c1.new .title {
  color: #ffffff;
  background-color: #2196f3;
}

@media (max-width:50rem) {
  .c1 .infos .info .tag {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

<span
  className="c0"
>
  <div
    className="fix c1"
    onClick={null}
  >
    <div
      className="title"
    >
      
    </div>
    <div
      className="infos"
    >
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          ref:UAI
        </div>
        <div
          className="value"
        >
          9710194J
        </div>
      </div>
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          school:FR
        </div>
        <div
          className="value"
        >
          primaire
        </div>
      </div>
      <div
        className="info add"
      >
        <div
          className="tag"
        >
          source
        </div>
        <div
          className="value"
        >
          data.gouv.fr:Éducation Nationale - 05/2016
        </div>
      </div>
    </div>
  </div>
</span>
`;
